@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 999.999.999
 Date: 9999-99-99
+  Bugfixes:
+    - Ignore ghost entitites that are marked as non-selectable. Fixes phantom ghosts when used with Tapeline mod. Permanent tapelines would leave "phantom" ghosts otherwise.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.5
 Date: 2021-10-17
